--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <h1>Odin Recipes</h1>
 <ul>
-<li><a href="recipes/acai-bowl.html">Acai Bowl</a></li>
-<li><a href="recipes/overnight-oats.html">Overnight Oats</a></li>
-<li><a href="recipes/toast.html">Toast</a></li>
+<li><a href="acai-bowl.html">Acai Bowl</a></li>
+<li><a href="overnight-oats.html">Overnight Oats</a></li>
+<li><a href="toast.html">Toast</a></li>
 </ul>
 <body>
     
